CHANGELOG

Nutils is being actively developed and the API is continuously evolving.
The following overview lists user facing changes as well as newly added
features in inverse chronological order.


FIXED: locate points on trimmed topologies with the skip_missing flag set

The `locate` method has a `skip_missing` argument that instructs the method to
silently drop points that can not be located on the topology. This setting was
partially ignored by trimmed topologies which could lead to a `LocateError`
despite the flag being set. This issue is now fixed.


CHANGED: solve, solve_withinfo arguments

Solver methods newton, minimize and pseudotime have their function signature
slightly changed: 1. The tol argument (used to define the stop criterion) has
been made mandatory. As the default value used to be 0 - an unreacheable value
in practice - the argument was effectively mandatory already, which this change
formalizes. 2. The maxiter argument was off by 1, leading maxiter=n to accept
n+1 iterations. This mistake is now fixed, which may break applications that
relied on the former erroneous behaviour.


NEW: function.linearize

Similar to `derivative`, the new function `linearize` takes the derivative of
an array to one or more arguments, but with the derivative directions
represented by arguments rather than array axes. This is particularly useful in
situations where weak forms are made up of symmetric, energy like components,
combined with terms that require dedicated test fields.


NEW: support for searchsorted and interp

Numpy's ufunc support has been extended to include numpy.searchsorted and
numpy.interp. Both support only a single evaluable argument: searchsorted's
argument `v` (values to be inserted) and interp's argument `xp` (data point
coordinates to interpate to). The remaining arguments must be static arrays.


NEW: option to disable Newton's line search

The `linesearch` argument of `solver.newton` can now receive the `None` value